2021-04-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha04: Aliso Summit';git push
	git tag -a 4.9.9-alpha04 -m 'ncremap crv area wrn, ccw_chk fix';git push --tags

	* ncremap nco_ccw_chk() fix bug where quadrilateral vertex D was always overwritten by vertex A
	Since 2016 this bug divided all quadrilaterals in two, halving all inferred curvilinear grid areas?

	* ncremap nco_grd_nfr() WARNING when global grid has suspicious area

2021-04-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha03: Modern Times';git push
	git tag -a 4.9.9-alpha03 -m 'nco.texi: ncvardmnlatlon; ncclimo hfs mth_srt/end; ncremap CISM glc msk, rint() integers';git push --tags

	* ncremap nco_ntp_vrt() add same rint() code as nco_rgr_wgt()

2021-04-07  Charlie Zender  <zender@uci.edu>

	* ncremap nco_rgr_wgt() always rint() regridded values before output when netCDF implicitly demotes them to integers

2021-04-06  Charlie Zender  <zender@uci.edu>

	* in.cdl change CDL type "long", now obsolete in netCDF 4.8.0, to "int" in CDL files

	* ncremap add LATIXY, LONGXY coordinates and lsmlat, lsmlon dimensions to internal database to support regridding CISM/CLM/ELM glacier masks

2021-03-31  Charlie Zender  <zender@uci.edu>

	* ncclimo implement mth_srt/end with clm_md=hfs for Yannick Peings who verifies it works

	* nco.texi add filters ncvardmnlst and ncvardmnlatlon for Jim Edwards

	* Add function name to nco_mss_val_get() WARNINGs

2021-03-30  Charlie Zender  <zender@uci.edu>

	* Regression tests look normal with netCDF 4.8.0-final, yay!

	* NCO 4.9.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha02: Dented Fender';git push
	git tag -a 4.9.9-alpha02 -m 'all: workaround libnetcdf nc_inq_var_deflate() HDF4 regression; ncclimo infer dpf, fix tpd inferral';git push --tags
